# market_maker

./: CMakeLists.txt  LICENSE  README.md  market_events.csv
src/: CMakeLists.txt  main.cpp  test_after_hours.cpp  test_alpaca.cpp
src/alpaca/: AlpacaTrader.cpp  AlpacaTrader.h
src/lob_engine/: OrderBook.cpp  OrderBook.h
src/pnl/: PnLCollector.cpp  PnLCollector.h
src/simulator/: Simulator.cpp  Simulator.h
src/strategies/: FixedSpreadStrategy.cpp  FixedSpreadStrategy.h  Strategy.h
tests/: CMakeLists.txt  test_basic.cpp  test_orderbook.cpp
